--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,24 +28,14 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Zurich
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
-          plugin_activity_visibility: all
-          plugin_code: yes
-          plugin_code_days: 3
-          plugin_code_lines: 12
-          plugin_code_load: 400
-          plugin_code_visibility: public
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_music: yes
           plugin_music_limit: 4
           plugin_music_mode: playlist
           plugin_music_played_at: yes
+          plugin_music_playlist:   <iframe src="https://open.spotify.com/embed/playlist/064jiIQ0HwXc2Ip8SThpAX?si=4d6c6de36b1047f5" width="" height="" frameborder="0" allowtransparency="" allow=""></iframe>
           plugin_music_provider: spotify
           plugin_music_time_range: short
           plugin_music_top_type: tracks
-          plugin_music_user: Ralul
+          plugin_music_user: .user.login
